Bug 121172 - Arrows are missing after opening a file with arrows
Summary: Arrows are missing after opening a file with arrows
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 121156 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-11-05 10:07 UTC by BogdanB
Modified: 2018-11-06 10:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
video showing the bug (2.10 MB, video/mp4)
2018-11-05 10:08 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description BogdanB 2018-11-05 10:07:51 UTC
Description:
See the video. I created a new file with 6.2 and add an arrow. Change the arrow size to be more visibile. Save the file and reopen the file. The arrow is gone. In fact it is in the file but it is moved to the file origin 0.0 of the file. I discovered this on Impress where you can find the arrows in the top left corner, but they are deformed and moved away...

Steps to Reproduce:
1. Create a new file and create an arrow.
2. Close the file and reopen
3. The arrow are gone.

Actual Results:
no arrow after opening the file

Expected Results:
arrow are still there as were saved


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.0.0.alpha1+
Build ID: 726c18db3215ec74135f51365322a6b531f328af
CPU threads: 4; OS: Linux 4.15; UI render: GL; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-03_19:38:55
Locale: ro-RO (ro_RO.UTF-8); Calc: threaded

bogdan@bogdan-H110M-S2H:~$ glxinfo | grep OpenGL
OpenGL vendor string: Intel Open Source Technology Center
OpenGL renderer string: Mesa DRI Intel(R) HD Graphics 630 (Kaby Lake GT2) 
OpenGL core profile version string: 4.5 (Core Profile) Mesa 18.0.5
OpenGL core profile shading language version string: 4.50
OpenGL core profile context flags: (none)
OpenGL core profile profile mask: core profile
OpenGL core profile extensions:
OpenGL version string: 3.0 Mesa 18.0.5
OpenGL shading language version string: 1.30
OpenGL context flags: (none)
OpenGL extensions:
OpenGL ES profile version string: OpenGL ES 3.2 Mesa 18.0.5
OpenGL ES profile shading language version string: OpenGL ES GLSL ES 3.20
OpenGL ES profile extensions:
bogdan@bogdan-H110M-S2H:~$
Comment 1 BogdanB 2018-11-05 10:08:21 UTC
Created attachment 146309 [details]
video showing the bug
Comment 2 BogdanB 2018-11-05 10:15:47 UTC
If someone have more time, the same thing can be tested on Libre Office Impress and here you can also find the missing arrows...
Comment 3 Xisco Faulí 2018-11-05 10:21:37 UTC
Regression introduced by:

author	Mike Kaganski <mike.kaganski@collabora.com>	2018-10-28 16:10:06 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	2018-10-28 15:05:32 +0100
commit 3040d328c944d91b0cd612d86d358823b5c5b883 (patch)
tree 689dd912ebff40137de98a7cf61b4042b9ec2cf2
parent d86778573a1ef207748cf8a6ca67eaef5cf04b02 (diff)
tdf#120703 PVS: V547 Expression is always true/false

Bisected with: bibisect-linux64-6.2

Adding Cc: to Mike Kaganski
Comment 4 Mike Kaganski 2018-11-05 10:56:55 UTC
https://gerrit.libreoffice.org/62886

Sorry for the error.
Comment 5 BogdanB 2018-11-05 12:02:52 UTC
(In reply to Mike Kaganski from comment #4)
> https://gerrit.libreoffice.org/62886
> 
> Sorry for the error.

How fast you was! If all bugs would solved like this LO could target "0 bugs" (zero bugs). ;)
Comment 6 Mike Kaganski 2018-11-05 12:49:31 UTC
(In reply to BogdanB from comment #5)
> How fast you was! If all bugs would solved like this LO could target "0
> bugs" (zero bugs). ;)

Heh, if only all errors were that simple!... :-) Thank you for spotting my mistake that fast.
Comment 7 Xisco Faulí 2018-11-05 13:14:30 UTC
*** Bug 121156 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2018-11-05 15:20:31 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/4b5420f88e4dcc442ade5c844cdabd4365ddf8d9%5E%21

tdf#121172: use first polygon

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2018-11-06 10:21:18 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 990761f5297ef7bff78f62e7df63d4d4a20616a6
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Mike Kaganski, thanks for the quick fix!