tdf#121172: use first polygon

This was a code reading mistake of me when preparing commit
3040d328c944d91b0cd612d86d358823b5c5b883.

Change-Id: I321f1f39e5600fcd786ba6d2e7a4b9444021bcff
Reviewed-on: https://gerrit.libreoffice.org/62886
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>